[package]
name = "lifelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22" }
cursive = { version = "0.19.0", default-features = false, features = ["crossterm-backend"] }
cursive_calendar_view = "0.8.0"
etcetera = "0.4.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
