[package]
name = "lifelog"
version = "0.1.0"
authors = ["Durbek Kamolov <k2.durbek@gmail.com>"]
repository = "https://github.com/DurbeKK/lifelog"
license = "MIT OR Apache-2.0"
description = "A simple diary that you can use from your terminal."
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22" }
cursive = { version = "0.19.0", default-features = false, features = ["crossterm-backend", "toml"] }
cursive_calendar_view = "0.8.0"
etcetera = "0.4.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
